# staffa

./: .gitignore  Cargo.toml  README.md  dockerfile
.github/workflows/: build.yaml
src/: backgammon.rs  dice.rs  duel.rs  evaluator.rs  inputs.rs  lib.rs  main.rs  onnx.rs  position_finder.rs  probabilities.rs  rollout.rs
src/evaluator/: hyper.rs  mod.rs  onnx.rs  ply.rs  pubeval.rs  rollout.rs  wildbg.rs
